--- a/package.json
+++ b/package.json
@@ -24,5 +24,11 @@
         "laravel-echo": "^1.7.0",
         "socket.io-client": "^2.3.0",
         "@vkontakte/vk-bridge": "^2.2.0"
+    },
+    "dependencies": {
+        "@fortawesome/fontawesome-svg-core": "^1.2.28",
+        "@fortawesome/free-solid-svg-icons": "^5.13.0",
+        "@fortawesome/vue-fontawesome": "^0.1.9",
+        "@fortawesome/free-brands-svg-icons": "^5.13.0"
     }
 }
