--- a/package.json
+++ b/package.json
@@ -27,8 +27,9 @@
     },
     "dependencies": {
         "@fortawesome/fontawesome-svg-core": "^1.2.28",
+        "@fortawesome/free-brands-svg-icons": "^5.13.0",
         "@fortawesome/free-solid-svg-icons": "^5.13.0",
         "@fortawesome/vue-fontawesome": "^0.1.9",
-        "@fortawesome/free-brands-svg-icons": "^5.13.0"
+        "vue-youtube-embed": "^2.2.2"
     }
 }
