--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
         "buefy": "^0.8.17",
         "laravel-echo": "^1.7.0",
         "socket.io-client": "^2.3.0",
-        "@vkontakte/vk-bridge": "^2.2.0"
+        "@vkontakte/vk-bridge": "^2.2.0",
+        "vuex": "^3.3.0"
     },
     "dependencies": {
         "@fortawesome/fontawesome-svg-core": "^1.2.28",
