--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,6 @@ npm-debug.log
 yarn-error.log
 laravel-echo-server.json
 laravel-echo-server.lock
+/.phpstorm.meta.php
+/_ide_helper.php
+/_ide_helper_models.php
