--- a/composer.json
+++ b/composer.json
@@ -19,12 +19,13 @@
         "vkcom/vk-php-sdk": "^5.101"
     },
     "require-dev": {
+        "barryvdh/laravel-ide-helper": "^2.7",
+        "caouecs/laravel-lang": "~6.0",
         "facade/ignition": "^2.0",
         "fzaninotto/faker": "^1.9.1",
         "mockery/mockery": "^1.3.1",
         "nunomaduro/collision": "^4.1",
-        "phpunit/phpunit": "^8.5",
-        "caouecs/laravel-lang": "~6.0"
+        "phpunit/phpunit": "^8.5"
     },
     "config": {
         "optimize-autoloader": true,
