Test dark theme

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,5 @@
 {
-    "/js/app.js": "/js/app.js?id=19461037deb63406a307",
-    "/css/app.css": "/css/app.css?id=6bb6ef7eeb051ddf3331"
+    "/js/app.js": "/js/app.js?id=daf48d0f5ebf653ebf21",
+    "/css/light.css": "/css/light.css?id=274ae05999edd3e2d33b",
+    "/css/dark.css": "/css/dark.css?id=96fe935f77abd08b6324"
 }
